# dovewebapp

./: README.md  dovewebapp.opam
chpasswd/: application.ml  architecture  config.ml  config.mli  controller.ml  controller.mli  controllerTest.ml  database.ml  databaseTestTools.ml  doveadm.ml  doveadm.mli  doveadmTest.ml  jbuild  mailMock.ml  mailSendmail.ml  mails.ml  mails.mli  mailsTest.ml  model.ml  model.mli  modelDatabase.ml  modelDatabase.mli  modelDatabaseTest.ml  modelMock.ml  modelMock.mli  new.822  template.ml  templateTest.ml  testAssertions.ml  token.ml  tokenTest.ml  userdb.sql  view.ml  view.mli  viewCgi.ml  viewMock.ml  viewWeb.ml  viewWeb.mli  viewWebTest.ml  webMock.ml
chpasswd/dovecot/: passwordScheme.ml  password_scheme_stub.c
chpasswd/src/: application.ml  config.ml  config.mli  controller.ml  controllerTest.ml  database.ml  databaseTest.ml  doveadm.ml  doveadmTest.ml  jbuild  mailMock.ml  (+19 more)
src/: application.ml  applicationTest.ml  config.ml  config.mli  controller.ml  controller.mli  controllerTest.ml  database.ml  databaseTest.ml  doveadm.ml  doveadm.mli  jbuild  jingooTest.ml  mailMock.ml  mailSendmail.ml  mails.ml  mails.mli  mailsTest.ml  main.ml  model.ml  model.mli  modelDatabase.ml  modelDatabase.mli  modelDatabaseTest.ml  modelMock.ml  modelMock.mli  modelTest.ml  stringMap.ml  stringify.ml  template.ml  templateTest.ml  testTools.ml  tests.ml  time.ml  token.mli  view.ml  view.mli  viewCgiTest.ml  viewMock.ml  viewWeb.ml  (+2 more)
templates/: admin_admin.html  admin_user.html  forgot.822  forgot.html  jbuild  login.html  new.822  style.css
(+10 files in other folders)
